syntax = "proto3";

package messages;

option go_package = "tasks_grpc/pkg/grpc/messages";

message Task {
	string id  = 1;
	string data = 2;
}

message Action {
    string data = 1;
}

message DeleteRequest {
    string id = 1;
}



